# MINDI-AI-COMPANION

./: .gitignore  CHANGELOG.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json
.agents/skills/ocr-document-processor/: SKILL.md
.github/workflows/: ci.yml
apps/desktop/: index.html  orb.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/e2e/: assistant-offline.spec.ts  orb-menu.spec.ts  orb-wake-start.spec.ts  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: mindi-prd.md
docs/benchmarks/: ai_smoke_baseline_2026-05-28.json
scripts/: ops_ai_smoke.py  restore_ai_runtime_config.py  runtime_smoke_session.py  train-mindi-wakeword.py  verify-release.ps1
services/agent/: pyproject.toml
services/agent/src/mindi_agent/: action_router.py  agent_state.py  ai_runtime_client.py  automation_service.py  dataset_pipeline.py  file_service.py  intelligence_service.py  launcher_service.py  main.py  memory_db.py  memory_service.py  ocr_service.py  permission_service.py  privacy_utils.py  proactive_service.py  research_service.py  respond_service.py  scheduler_utils.py  schemas.py  security_service.py  store.py  task_service.py  voice_service.py  web_service.py
services/agent/tests/: conftest.py  test_agent_runtime_integration.py  test_agent_state.py  test_api.py  test_phase2_actions.py  test_phase3_input.py  test_phase3_proactive.py
services/ai_runtime/: pyproject.toml
services/ai_runtime/src/mindi_ai_runtime/: llama_server.py  main.py  ocr_helper.py  whisper_asr.py
services/ai_runtime/tests/: test_runtime_contract.py
(+31 files in other folders)
