[project]
name = "mindi-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.4",
  "uvicorn>=0.32.0",
  "pydantic>=2.9.2",
  "pypdf>=5.1.0",
  "Pillow>=11.0.0",
  "pytesseract>=0.3.13"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "httpx>=0.27.2"
]

[tool.pytest.ini_options]
markers = [
  "integration: tests that require live agent and ai_runtime services",
]
