[project]
name = "mindi-ai-runtime"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.4",
  "uvicorn>=0.32.0",
  "pydantic>=2.9.2",
  "Pillow>=11.0.0",
  "qwen-asr==0.0.6",
  "transformers[torch]==4.57.6",
  "faster-whisper>=1.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "httpx>=0.27.2"
]

[tool.pytest.ini_options]
markers = [
  "integration: tests that require a configured local GGUF model path",
]
