[package]
name = "mindi"
version = "0.1.0"
description = "MINDI local assistant"
authors = ["MINDI"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mindi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
